# cfb_rankings

./: .gitignore  CMakeLists.txt  README.md  README_python.md  cfb.cpp  cfb.py  cfb_2022.py  cfb_fast.py  check_this_week.py  games2020.csv  games2021.csv  games2022.csv  games2023.csv  games2024.csv  games2025.csv  get_games.py  glicko2.h  glicko2.py  glicko2_fast.py  teams.csv  teams_2022_rankings.csv  teams_2023_rankings.csv  teams_2024_rankings.csv  teams_2025_rankings.csv  wrapper.py
